--- a/main.yml
+++ b/main.yml
@@ -1,30 +1,47 @@
 - hosts: localhost
+  connection: local
   gather_facts: false
-  vars:
-    base_image_list: 
-      - openshift3/ose-haproxy-router
-      #- openshift3/ose-docker-builder
-      #- openshift3/ose-haproxy-router
-      #- openshift3/ose-sti-builder
-      #- openshift3/ose-deployer
-      #- openshift3/ose-docker-registry
-      #- openshift3/ose-keepalived-ipfailover
-      #- openshift3/ose-pod
-    public_registry_url: https://access.redhat.com/webassets/docker/content/dist/rhel/server/7/7Server/x86_64/ose/3/containers/registry
-    version: v3.3
-    save_imagelist: false
-    #chose which type to push image,network or tar.default network. 
-    use_network: true
-    registry_name: registry.example.com:5000
-    public_registry: registry.access.redhat.com
-    remove_public_image_tag: false
+  vars_files:
+    - vars/vars_config.yml
   tasks:
-    - fail: msg="when use_network,please set registry_name"
-      when: 
-        - use_network == "true" 
-        - registry_name is undefined
+    - include: tasks/Preparation.yml
 
-    - include: tasks/pull_base_image.yml
+    - include: tasks/get_tag_list.yml select_sign="1"
       with_items: "{{base_image_list}}"
       loop_control:
         loop_var: outer_item
+      when: 
+        - base_image_list is defined
+        - base_image_list != []
+
+    - include: tasks/get_tag_list.yml select_sign="0"
+      with_items: "{{openshift_image_list}}"
+      loop_control:
+        loop_var: outer_item
+      when: 
+        - openshift_image_list is defined
+        - openshift_image_list != []
+
+    - include: tasks/get_tag_list.yml select_sign="0"
+      with_items: "{{rhscl_image_list}}"
+      loop_control:
+        loop_var: outer_item
+      when: 
+        - rhscl_image_list is defined
+        - rhscl_image_list != []
+
+    - include: tasks/get_tag_list.yml select_sign="0"
+      with_items: "{{jboss_image_list}}"
+      loop_control:
+        loop_var: outer_item
+      when: 
+        - jboss_image_list is defined
+        - jboss_image_list != []
+
+    - include: tasks/get_tag_list.yml select_sign="0"
+      with_items: "{{other_image_list}}"
+      loop_control:
+        loop_var: outer_item
+      when: 
+        - other_image_list is defined
+        - other_image_list != []
