--- a/tasks/pull_image.yml
+++ b/tasks/pull_image.yml
@@ -1,14 +1,30 @@
+- command: "/bin/date +%Y-%m-%d_%H:%M:%S"
+  register: DATE_CMD
+
+- set_fact:
+    startDate: "{{DATE_CMD.stdout}}"
+
+- set_fact:
+    infofile_name: info.{{image_tag}}.{{startDate}}
+    errorfile_name: error.{{image_tag}}.{{startDate}}
+
 - name: pull image
   docker_image:
-    name: "{{image_name}}"
+    name: "{{public_registry}}/{{image_name}}"
     tag: "{{image_tag}}"
     timeout: 300
-    register: pull_result
-    ignore_errors: True
+  register: pull_result
+  ignore_errors: True
 
-- name: output msg if pull error
-  debug: msg="{{pull_result.msg}}"
-  when: "'Error' in pull_result.msg"
+- name: output pull msg
+  debug: msg="{{pull_result}}"
+
+- name: create dir of imagepull error
+  file: path={{imagefile_path}}/imagepull state=directory
+
+- name: create pull error file        
+  template: src=../templates/image_pull_error.j2 dest={{imagefile_path}}/imagepull/{{errorfile_name}}
+  when: pull_result| failed
 
 - name: Inspect a single image
   docker_image_facts:
@@ -20,40 +36,59 @@
       set_fact:
         image_id: "{{image_info.images[0].Id}}"
         create_time: "{{image_info.images[0].Created}}"
-
-    - command: "/bin/date +%Y-%m-%d_%H:%M:%S"
-      register: DATE_CMD
-    
-    - set_fact:
-        startDate: "{{DATE_CMD.stdout}}"
-    
-    - set_fact:
-        savefile_name: info.{{image_tag}}.{{startDate}}
-    
-    - name: create dir of imagelist file
-        file: path=/tmp/imagelist/{{base_image}}/imagepull state=directory
     
     - name: create info file
-        template: src=../templates/image_info.j2 dest=/tmp/imagelist/{{base_image}}/imagepull/info.{{image_tag}}.{{startDate}}
-  when: "'Error' not in pull_result.msg" and "image_info.images != []"
+      template: src=../templates/image_info.j2 dest={{imagefile_path}}/imagepull/{{infofile_name}}
+  when: 
+    - not pull_result| failed
+    - image_info.images != []
 
 - block:
-    - name: tag image and push to other registry
+    - name: tag image
       docker_image:
-        name: "{{image_name}}"
-        repository: "{{registry_name}}/{{image_name}}"
+        name: "{{public_registry}}/{{image_name}}"
+        repository: "{{local_registry}}/{{image_name}}"
+        tag: "{{image_tag}}"
+      register: tag_result
+      ignore_errors: True
+  
+    - name: output tag result
+      debug: msg="{{tag_result}}"
+
+    - name: push image
+      docker_image:
+        name: "{{local_registry}}/{{image_name}}"
         tag: "{{image_tag}}"
         push: yes
+        timeout: 300
+      register: push_result
       ignore_errors: True
-    - name: remove public image tag
+      when: not tag_result|failed
+    
+    - name: output push result
+      debug: msg="{{push_result}}"
+    
+    - pause: seconds=10
+
+    - name: create dir of imagepush file
+      file: path={{imagefile_path}}/imagepush state=directory
+      when: push_result|failed
+
+    - name: create push error file        
+      template: src=../templates/image_push_error.j2 dest={{imagefile_path}}/imagepush/{{errorfile_name}}
+      when: push_result|failed
+
+    - name: remove local registry image tag
       docker_image:
         state: absent
-        name: "{{public_registry}}/{{image_name}}" 
+        name: "{{local_registry}}/{{image_name}}" 
         tag: "{{image_tag}}"
-      when: remove_public_image_tag == "true"
-  when: "use_network == 'true'" and "'Error' not in pull_result.msg"
+      ignore_errors: True
+  when: 
+    - use_network == "true"
+    - not pull_result|failed
 
-#now not support
+#not support now
 - block:
     - name: create image tar dir
       file: path=/tmp/imagetar/ state=directory
@@ -63,11 +98,6 @@
         name: "{{public_registry}}/{{image_name}}"
         tag: "{{image_tag}}"
         archive_path: 
-       
-    - name: remove public image tag
-      docker_image:
-        state: absent
-        name: "{{public_registry}}/{{image_name}}" 
-        tag: "{{image_tag}}"
-      when: remove_public_image_tag == "true"
-  when: use_network == "false" and "'Error' not in pull_result.msg"
+  when: 
+    - use_network == "false"
+    - not pull_result|failed
