--- a/tasks/pull_image.yml
+++ b/tasks/pull_image.yml
@@ -1,8 +1,3 @@
-- command: "/bin/date +%Y-%m-%d_%H:%M:%S"
-  register: DATE_CMD
-
-- set_fact:
-    startDate: "{{DATE_CMD.stdout}}"
 
 - set_fact:
     infofile_name: info.{{image_tag}}.{{startDate}}
@@ -89,15 +84,15 @@
     - not pull_result|failed
 
 #not support now
-- block:
-    - name: create image tar dir
-      file: path=/tmp/imagetar/ state=directory
-
-    - name: Archive image
-      docker_image:
-        name: "{{public_registry}}/{{image_name}}"
-        tag: "{{image_tag}}"
-        archive_path: 
-  when: 
-    - use_network == "false"
-    - not pull_result|failed
+#- block:
+#    - name: create image tar dir
+#      file: path=/tmp/imagetar/ state=directory
+#
+#    - name: Archive image
+#      docker_image:
+#        name: "{{public_registry}}/{{image_name}}"
+#        tag: "{{image_tag}}"
+#        archive_path: 
+#  when: 
+#    - use_network == "false"
+#    - not pull_result|failed
