--- a/vars/vars_config.yml
+++ b/vars/vars_config.yml
@@ -2,18 +2,18 @@
 #use '#' note beginning of image line can disable sync of image.
 #when list is null,please add [] end of imagelist name.example base_image_list: []
 base_image_list:
-  - openshift3/ose-haproxy-router
-  - openshift3/ose-docker-builder
-  - openshift3/ose-sti-builder
-  - openshift3/ose-deployer
-  - openshift3/ose-docker-registry
-  - openshift3/ose-keepalived-ipfailover
-  - openshift3/ose-pod
+  #- openshift3/ose-haproxy-router
+  #- openshift3/ose-docker-builder
+  #- openshift3/ose-sti-builder
+  #- openshift3/ose-deployer
+  #- openshift3/ose-docker-registry
+  #- openshift3/ose-keepalived-ipfailover
+  #- openshift3/ose-pod
 
 openshift_image_list:
-  - openshift3/mongodb-24-rhel7
-  - openshift3/mysql-55-rhel7
-  - openshift3/postgresql-92-rhel7
+  #- openshift3/mongodb-24-rhel7
+  #- openshift3/mysql-55-rhel7
+  #- openshift3/postgresql-92-rhel7
   - openshift3/nodejs-010-rhel7
   - openshift3/php-55-rhel7
   - openshift3/ruby-20-rhel7
