--- a/main.yml
+++ b/main.yml
@@ -1,6 +1,9 @@
 - hosts: localhost
   connection: local
   gather_facts: false
+  remote_user: root
+  become: yes
+  become_method: sudo
   vars_files:
     - vars/vars_config.yml
   tasks:
