--- a/tasks/get_tag_list.yml
+++ b/tasks/get_tag_list.yml
@@ -3,7 +3,7 @@
     image_name: "{{outer_item}}"
     sign: "{{select_sign}}"
 
-- name: get tag list
+- name: get openshift image tag list
   uri:
     url: "{{public_registry_url}}/{{image_name}}/tags/list"
     return_content: yes
@@ -12,6 +12,18 @@
     status_code: 200
   register: tag_list
   ignore_errors: True
+  when: sign != "2"
+
+- name: get tag list
+  uri:
+    url: "{{public_registry_url_2}}/{{image_name}}/tags/list"
+    return_content: yes
+    Content-type: "application/json"
+    body_format: json
+    status_code: 200
+  register: tag_list
+  ignore_errors: True
+  when: sign == "2"
 
 - name: set fact tag content
   set_fact:
