--- a/vars/vars_config.yml
+++ b/vars/vars_config.yml
@@ -1,59 +1,59 @@
 #image list you want sync.
 #use '#' note beginning of image line can disable sync of image.
 #when list is null,please add [] end of imagelist name.example base_image_list: []
-base_image_list: []
-  #- openshift3/ose-haproxy-router
-  #- openshift3/ose-docker-builder
-  #- openshift3/ose-sti-builder
-  #- openshift3/ose-deployer
-  #- openshift3/ose-docker-registry
-  #- openshift3/ose-keepalived-ipfailover
-  #- openshift3/ose-pod
-  #- openshift3/ose-f5-router
-  #- openshift3/ose-recycler
-  #- openshift3/ose-egress-router
-  #- openshift3/registry-console
-  #- openshift3/metrics-hawkular-metrics
-  #- openshift3/metrics-heapster
-  #- openshift3/metrics-deployer
-  #- openshift3/metrics-cassandra
-  #- openshift3/logging-auth-proxy
-  #- openshift3/logging-elasticsearch
-  #- openshift3/logging-curator
-  #- openshift3/logging-kibana
-  #- openshift3/logging-fluentd
-  #- openshift3/logging-deployer
-  #- openshift3/logging-deployment
-  #- openshift3/image-inspector
+base_image_list:
+  - openshift3/ose-haproxy-router
+  - openshift3/ose-docker-builder
+  - openshift3/ose-sti-builder
+  - openshift3/ose-deployer
+  - openshift3/ose-docker-registry
+  - openshift3/ose-keepalived-ipfailover
+  - openshift3/ose-pod
+  - openshift3/ose-f5-router
+  - openshift3/ose-recycler
+  - openshift3/ose-egress-router
+  - openshift3/registry-console
+  - openshift3/metrics-hawkular-metrics
+  - openshift3/metrics-heapster
+  - openshift3/metrics-deployer
+  - openshift3/metrics-cassandra
+  - openshift3/logging-auth-proxy
+  - openshift3/logging-elasticsearch
+  - openshift3/logging-curator
+  - openshift3/logging-kibana
+  - openshift3/logging-fluentd
+  - openshift3/logging-deployer
+  - openshift3/logging-deployment
+  - openshift3/image-inspector
   #- openshift3/openvswitch
   #- openshift3/node
   #- openshift3/ose
 
 # API https://access.redhat.com/webassets/docker/content/dist/rhel/server/7/7Server/x86_64/ose/3/containers/registry/openshift3/ose-haproxy-router/tags/list
-openshift_image_list: []
-  #- openshift3/mongodb-24-rhel7
-  #- openshift3/mysql-55-rhel7
-  #- openshift3/postgresql-92-rhel7
-  #- openshift3/nodejs-010-rhel7
-  #- openshift3/php-55-rhel7
-  #- openshift3/ruby-20-rhel7
-  #- openshift3/python-33-rhel7
-  #- openshift3/perl-516-rhel7
-  #- openshift3/jenkins-1-rhel7
-  #- openshift3/jenkins-slave-maven-rhel7
-  #- openshift3/jenkins-slave-nodejs-rhel7
-  #- openshift3/jenkins-slave-base-rhel7
+openshift_image_list:
+  - openshift3/mongodb-24-rhel7
+  - openshift3/mysql-55-rhel7
+  - openshift3/postgresql-92-rhel7
+  - openshift3/nodejs-010-rhel7
+  - openshift3/php-55-rhel7
+  - openshift3/ruby-20-rhel7
+  - openshift3/python-33-rhel7
+  - openshift3/perl-516-rhel7
+  - openshift3/jenkins-1-rhel7
+  - openshift3/jenkins-slave-maven-rhel7
+  - openshift3/jenkins-slave-nodejs-rhel7
+  - openshift3/jenkins-slave-base-rhel7
 
 # API https://access.redhat.com/webassets/docker/content/dist/rhel/server/7/7Server/x86_64/rhscl/1/containers/registry/rhscl/mongodb-26-rhel7/tags/list  
 rhscl_image_list:
-  #- rhscl/mariadb-101-rhel7
-  #- rhscl/mongodb-32-rhel7
-  #- rhscl/mongodb-26-rhel7
-  #- rhscl/mysql-56-rhel7
-  #- rhscl/nodejs-4-rhel7
-  #- rhscl/php-56-rhel7
-  #- rhscl/postgresql-94-rhel7
-  #- rhscl/postgresql-95-rhel7
+  - rhscl/mariadb-101-rhel7
+  - rhscl/mongodb-32-rhel7
+  - rhscl/mongodb-26-rhel7
+  - rhscl/mysql-56-rhel7
+  - rhscl/nodejs-4-rhel7
+  - rhscl/php-56-rhel7
+  - rhscl/postgresql-94-rhel7
+  - rhscl/postgresql-95-rhel7
   - rhscl/python-35-rhel7
   - rhscl/python-34-rhel7
   - rhscl/python-27-rhel7
@@ -61,9 +61,9 @@ rhscl_image_list:
   - rhscl/ruby-22-rhel7
   - rhscl/s2i-base-rhel7
   - rhscl/perl-520-rhel7
-  - rhscl/nginx-18-rhel7
-  - rhscl/nginx-16-rhel7
-  - rhscl/httpd-24-rhel7
+  #- rhscl/nginx-18-rhel7
+  #- rhscl/nginx-16-rhel7
+  #- rhscl/httpd-24-rhel7
 
 #API https://access.redhat.com/webassets/docker/content/dist/rhel/server/7/7Server/x86_64/ose/3/containers/registry/jboss-fuse-6/fis-java-openshift/tags/list  
 jboss_image_list:
