--- a/vars/vars_config.yml
+++ b/vars/vars_config.yml
@@ -80,7 +80,7 @@ jboss_image_list:
   - jboss-datagrid-6/datagrid65-openshift
   - jboss-processserver-6/processserver63-openshift
 
-# not download  
+# not download now
 other_image_list: []
   #- rhel7/etcd
   #- rhel7/pod-infrastructure
@@ -95,10 +95,13 @@ public_registry_url: https://access.redhat.com/webassets/docker/content/dist/rhe
 public_registry_url_2: https://access.redhat.com/webassets/docker/content/dist/rhel/server/7/7Server/x86_64/rhscl/1/containers/registry
 
 #image version greater than this will pull,only take effect in base_image_list. tag :latest not download.
-version: v3.3.1.3
+version: v3.3
 
 #whether or not save all image tag list,must "true" or "false"
 save_imagelist: "true"
+
+#path which save image archive
+archive_path: /var/www/image/image/
 
 #chose which type to push image,network or tar. default network.fasle will use tar,but is not Support now.nust "true" or "false"
 use_network: "true"
